Fix some problems with Dan